--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "start:dev": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.14"
+  }
 }
